Fixing slider alignment

--- a/css/web3bandeq.css
+++ b/css/web3bandeq.css
@@ -91,11 +91,6 @@ div.frame {
     display: block;
 }
 
-div.slider > input {
-    margin: auto;
-    display: block;
-}
-
 input[type=range].vertical-slider {
     height: 137px;
     width: 20px;
@@ -105,6 +100,12 @@ input[type=range].vertical-slider {
 input[type=range].horizontal-slider {
     height: 20px;
     width: 137px;
+    margin: auto;
+    display: block;
+}
+
+.slider-col > input {
+    width: 20px;
     margin: auto;
     display: block;
 }
